config/rhoai/auth_proxy_service_patch.yaml
$patch: delete
apiVersion: v1
kind: Service
metadata:
  name: controller-manager-metrics-service
  namespace: system
