config/rhoai/kueue-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kueue-metrics-service
spec:
  ports:
  - name: metrics
    port: 8080
    protocol: TCP
    targetPort: metrics
  selector:
    app.kubernetes.io/name: kueue
    app.kubernetes.io/part-of: kueue
status:
  loadBalancer: {}
