config/rhoai/mutating_webhook_patch.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook-configuration
webhooks:
  - $patch: delete
    name: mpod.kb.io
  - name: mjob.kb.io
    namespaceSelector:
      matchExpressions:
      - key: kubernetes.io/metadata.name
        operator: NotIn
        values:
        - kube-system
        - kube-public
        - openshift
        - openshift-config
        - openshift-config-managed
        - openshift-etcd
        - openshift-image-registry
        - openshift-marketplace
        - openshift-monitoring
        - openshift-operator-lifecycle-manager
        - openshift-operators
